packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_example_search_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
assertion_line: 17
expression: value
---
{
  "example_hits": [
    {
      "example": {
        "example_id": "repo:gateway-sync:example:examples/solve_demo.jl",
        "path": "examples/solve_demo.jl",
        "repo_id": "gateway-sync",
        "summary": null,
        "title": "solve_demo"
      },
      "hierarchical_uri": "wendao://repo/unknown/gateway-sync/examples/examples:solve_demo.jl/repo:gateway-sync:example:examples/solve_demo.jl",
      "hierarchy": [
        "examples",
        "solve_demo.jl"
      ],
      "projection_page_ids": [
        "repo:gateway-sync:projection:explanation:doc:repo:gateway-sync:doc:README.md",
        "repo:gateway-sync:projection:howto:example:repo:gateway-sync:example:examples/solve_demo.jl",
        "repo:gateway-sync:projection:reference:module:repo:gateway-sync:module:GatewaySyncPkg",
        "repo:gateway-sync:projection:reference:symbol:repo:gateway-sync:symbol:GatewaySyncPkg.solve"
      ],
      "rank": 1,
      "saliency_score": 0.5,
      "score": 0.9090909090909092
    }
  ],
  "examples": [
    {
      "example_id": "repo:gateway-sync:example:examples/solve_demo.jl",
      "path": "examples/solve_demo.jl",
      "repo_id": "gateway-sync",
      "summary": null,
      "title": "solve_demo"
    }
  ],
  "repo_id": "gateway-sync"
}
