packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_gateway_missing_kind_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "MISSING_KIND",
  "message": "`kind` is required"
}
