packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_gateway_missing_node_id_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "MISSING_NODE_ID",
  "message": "`node_id` is required"
}
