packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_gateway_missing_page_id_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "MISSING_PAGE_ID",
  "message": "`page_id` is required"
}
