packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_gateway_missing_repo_error.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "code": "MISSING_REPO",
  "message": "`repo` is required"
}
