packages/rust/crates/xiuxian-wendao-studio/tests/snapshots/gateway/studio/repo_index_endpoint_modelica_json.snap
---
source: packages/rust/crates/xiuxian-wendao-studio/tests/unit/gateway/studio/support.rs
expression: value
---
{
  "active": 0,
  "checking": 0,
  "failed": 0,
  "indexing": 0,
  "maxConcurrency": 1,
  "queued": 1,
  "ready": 0,
  "repos": [
    {
      "attemptCount": 0,
      "phase": "queued",
      "repoId": "modelica-gateway-index",
      "updatedAt": "[updated-at]"
    }
  ],
  "syncConcurrencyLimit": 1,
  "syncing": 0,
  "targetConcurrency": 1,
  "total": 1,
  "unsupported": 0
}
